<?xml version="1.0" encoding="UTF-8"?>
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="
		http://maven.apache.org/POM/4.0.0
		https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.oxerr</groupId>
		<artifactId>oxerr-parent</artifactId>
		<version>2.2.1</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.oxerr.vividseats.client</groupId>
	<artifactId>vividseats-client</artifactId>
	<name>Vivid Seats Client - Parent</name>
	<description>
		Vivid Seats Client - Vivid Seats Broker API Client Library for Java.
	</description>
	<packaging>pom</packaging>
	<version>0.0.13-SNAPSHOT</version>
	<url>https://www.oxerr.org/vividseats-client</url>
	<inceptionYear>2024</inceptionYear>
	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<cxf.version>4.0.7</cxf.version>
		<jackson.version>2.19.0</jackson.version>
		<log4j.version>2.24.3</log4j.version>
		<rescu-ext.version>1.0.3</rescu-ext.version>
		<ticket-inventory-support.version>[5.3.3,)</ticket-inventory-support.version>
	</properties>
	<modules>
		<module>vividseats-client-model</module>
		<module>vividseats-client-core</module>
		<module>vividseats-client-cached</module>
		<module>vividseats-client-cxf</module>
		<module>vividseats-client-rescu</module>
		<module>vividseats-client-coverage</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<additionalOptions>-package</additionalOptions>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.ws.rs</groupId>
				<artifactId>jakarta.ws.rs-api</artifactId>
				<version>3.1.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.17.0</version>
			</dependency>
			<dependency>
				<groupId>org.oxerr.ticket.inventory.support.cached</groupId>
				<artifactId>ticket-inventory-support-cached-core</artifactId>
				<version>${ticket-inventory-support.version}</version>
			</dependency>
			<dependency>
				<groupId>org.oxerr.ticket.inventory.support.cached</groupId>
				<artifactId>ticket-inventory-support-cached-redisson</artifactId>
				<version>${ticket-inventory-support.version}</version>
			</dependency>
			<dependency>
				<groupId>org.redisson</groupId>
				<artifactId>redisson</artifactId>
				<version>3.46.0</version>
			</dependency>
			<dependency>
				<groupId>com.evanlennick</groupId>
				<artifactId>retry4j</artifactId>
				<version>0.15.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>jsr305</artifactId>
				<version>3.0.2</version>
			</dependency>
			<dependency>
				<groupId>io.github.poshjosh</groupId>
				<artifactId>rate-limiter-annotation</artifactId>
				<version>0.8.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<scm>
		<connection>scm:git:git@github.com:sutra/vividseats-client.git</connection>
		<developerConnection>scm:git:git@github.com:sutra/vividseats-client.git</developerConnection>
		<url>https://github.com/sutra/vividseats-client/tree/master</url>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/sutra/vividseats-client/issues</url>
	</issueManagement>
	<distributionManagement>
		<site>
			<id>oxerr.org</id>
			<url>scp://oxerr.org/usr/local/www/vividseats-client/</url>
		</site>
	</distributionManagement>
	<profiles>
		<profile>
			<id>logging</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencyManagement>
				<dependencies>
					<dependency>
						<groupId>org.apache.logging.log4j</groupId>
						<artifactId>log4j-api</artifactId>
						<version>${log4j.version}</version>
					</dependency>
					<dependency>
						<groupId>org.apache.logging.log4j</groupId>
						<artifactId>log4j-core</artifactId>
						<version>${log4j.version}</version>
					</dependency>
					<dependency>
						<groupId>org.apache.logging.log4j</groupId>
						<artifactId>log4j-jul</artifactId>
						<version>${log4j.version}</version>
					</dependency>
					<dependency>
						<groupId>org.apache.logging.log4j</groupId>
						<artifactId>log4j-slf4j2-impl</artifactId>
						<version>${log4j.version}</version>
					</dependency>
					<dependency>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-api</artifactId>
						<version>2.1.0-alpha1</version>
					</dependency>
				</dependencies>
			</dependencyManagement>
		</profile>
		<profile>
			<id>jackson</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencyManagement>
				<dependencies>
					<dependency>
						<groupId>com.fasterxml.jackson.core</groupId>
						<artifactId>jackson-annotations</artifactId>
						<version>${jackson.version}</version>
					</dependency>
					<dependency>
						<groupId>com.fasterxml.jackson.core</groupId>
						<artifactId>jackson-databind</artifactId>
						<version>${jackson.version}</version>
					</dependency>

					<!-- Java 8 Date/time -->
					<dependency>
						<groupId>com.fasterxml.jackson.datatype</groupId>
						<artifactId>jackson-datatype-jsr310</artifactId>
						<version>${jackson.version}</version>
					</dependency>

					<dependency>
						<groupId>com.fasterxml.jackson.jakarta.rs</groupId>
						<artifactId>jackson-jakarta-rs-json-provider</artifactId>
						<version>${jackson.version}</version>
					</dependency>
				</dependencies>
			</dependencyManagement>
		</profile>
		<profile>
			<id>cxf</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencyManagement>
				<dependencies>
					<dependency>
						<groupId>org.apache.cxf</groupId>
						<artifactId>cxf-rt-rs-client</artifactId>
						<version>${cxf.version}</version>
					</dependency>
					<dependency>
						<groupId>org.apache.cxf</groupId>
						<artifactId>cxf-rt-features-logging</artifactId>
						<version>${cxf.version}</version>
					</dependency>
				</dependencies>
			</dependencyManagement>
		</profile>
		<profile>
			<id>rescu</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencyManagement>
				<dependencies>
					<dependency>
						<groupId>org.oxerr.rescu.ext</groupId>
						<artifactId>rescu-ext-singleton</artifactId>
						<version>${rescu-ext.version}</version>
					</dependency>
					<dependency>
						<groupId>org.oxerr.rescu.ext</groupId>
						<artifactId>rescu-ext-rate-limiter-core</artifactId>
						<version>${rescu-ext.version}</version>
					</dependency>
					<dependency>
						<groupId>com.github.mmazi</groupId>
						<artifactId>rescu</artifactId>
						<version>3.0</version>
					</dependency>
				</dependencies>
			</dependencyManagement>
		</profile>
		<profile>
			<id>test</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.junit.jupiter</groupId>
					<artifactId>junit-jupiter-api</artifactId>
					<scope>test</scope>
				</dependency>
			</dependencies>
			<dependencyManagement>
				<dependencies>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-api</artifactId>
						<version>5.13.0-M3</version>
					</dependency>
					<dependency>
						<groupId>org.reflections</groupId>
						<artifactId>reflections</artifactId>
						<version>0.10.2</version>
					</dependency>
					<dependency>
						<groupId>nl.jqno.equalsverifier</groupId>
						<artifactId>equalsverifier</artifactId>
						<version>3.18.2</version>
					</dependency>
				</dependencies>
			</dependencyManagement>
		</profile>
	</profiles>
</project>
